--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-<h1>NO</h1>
+<!DOCTYPEhtml>
+<head lang="en">
+  <style>
+    h1 {
+      font-size: 5em;
+      
+      height: 200px;
+      width: 400px;
+
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      margin-top: -100px;
+      margin-left: -200px;
+    }
+  </style>
+</head>
+<body>
+  <h1>NO</h1>
+</body>
