--- a/index.html
+++ b/index.html
@@ -2,14 +2,16 @@
 <head lang="en">
   <style>
     h1 {
-      font-size: 5em;
+      font-size: 10em;
+      height: 1em;
+      width: 2em;
       
-      height: 200px;
-      width: 400px;
-
       position: fixed;
       top: 50%;
       left: 50%;
+      
+      margin-top: -1em;
+      margin-left: -1em;
     }
   </style>
 </head>
